[gd_scene load_steps=56 format=3 uid="uid://dw8sq5c35d3e3"]

[ext_resource type="Script" path="res://room.gd" id="1_5a0lj"]
[ext_resource type="Texture2D" uid="uid://dp6t6a8nt5ogo" path="res://assets/room1.png" id="2_uhwfe"]
[ext_resource type="Texture2D" uid="uid://c2k8b6k7s5wcw" path="res://assets/room-empty.png" id="3_1olt3"]
[ext_resource type="Texture2D" uid="uid://ddaujmsfqks3s" path="res://assets/room2.png" id="3_1uoe5"]
[ext_resource type="Texture2D" uid="uid://bn867nufsawqh" path="res://assets/room.png" id="3_bvvmn"]
[ext_resource type="Texture2D" uid="uid://b1o1ne20lcd5y" path="res://assets/dave0.png" id="4_0oa7i"]
[ext_resource type="Texture2D" uid="uid://dgpg7c0bmxrh0" path="res://assets/dave.png" id="4_2dpmh"]
[ext_resource type="PackedScene" uid="uid://d1b6843ixwxes" path="res://transition_box.tscn" id="5_p8ga4"]
[ext_resource type="Texture2D" uid="uid://dxldda7vd0xq5" path="res://assets/room3.png" id="5_r74sv"]
[ext_resource type="Texture2D" uid="uid://bylda0yyunkyl" path="res://assets/room4.png" id="6_f0lmr"]
[ext_resource type="Texture2D" uid="uid://f18mbfdkmf4g" path="res://assets/lab8researcher0.png" id="6_wwwmp"]
[ext_resource type="Texture2D" uid="uid://bc1brlgr4nvio" path="res://assets/lab8researcher.png" id="7_jirfx"]
[ext_resource type="Texture2D" uid="uid://bsilxxvg5sfb4" path="res://assets/room5.png" id="7_ytjpa"]
[ext_resource type="Texture2D" uid="uid://bqfpu861xiaml" path="res://assets/trudy0.png" id="8_aygcv"]
[ext_resource type="Texture2D" uid="uid://dm553wwra2tf6" path="res://assets/room6.png" id="8_fullp"]
[ext_resource type="Texture2D" uid="uid://dj850pa7w4bnk" path="res://assets/room7.png" id="9_3gacd"]
[ext_resource type="Texture2D" uid="uid://c4f4d26n7wjgg" path="res://assets/trudy.png" id="9_8kctf"]
[ext_resource type="Texture2D" uid="uid://pcnemrfyom55" path="res://assets/room8.png" id="10_0pmh1"]
[ext_resource type="Texture2D" uid="uid://dodhigqs33wyh" path="res://assets/room9.png" id="11_lspsq"]
[ext_resource type="PackedScene" uid="uid://yavs46qwbjny" path="res://state_container.tscn" id="11_vl6ey"]
[ext_resource type="Texture2D" uid="uid://cw8onxu3ujimt" path="res://assets/room10.png" id="12_13ox5"]
[ext_resource type="PackedScene" uid="uid://b1yofrb2qrxbe" path="res://dialogue_box.tscn" id="12_40mwk"]
[ext_resource type="PackedScene" uid="uid://1b7a0ydchq46" path="res://compendium.tscn" id="13_tygmm"]
[ext_resource type="Theme" uid="uid://b1403fceh41l5" path="res://control_theme.tres" id="14_afhcp"]
[ext_resource type="Texture2D" uid="uid://dubrma0y3aeo0" path="res://assets/charlotte0.png" id="15_pyvnm"]
[ext_resource type="Texture2D" uid="uid://bbv7sw0r0duld" path="res://assets/alice0.png" id="15_vablc"]
[ext_resource type="Texture2D" uid="uid://40r1wdvs6iel" path="res://assets/alice.png" id="16_a2dnf"]
[ext_resource type="Texture2D" uid="uid://c13gw7xg60kbx" path="res://assets/charlotte.png" id="16_ikxmv"]
[ext_resource type="Texture2D" uid="uid://fwpfs1d5ydh2" path="res://assets/barry0.png" id="17_1u0c3"]
[ext_resource type="Texture2D" uid="uid://dy83l5p0d3g1y" path="res://assets/blademaster0.png" id="17_2y7oj"]
[ext_resource type="Texture2D" uid="uid://xla878iru0ea" path="res://assets/eanasir_1.png" id="17_ncays"]
[ext_resource type="Texture2D" uid="uid://bbmwtkgjyuaw5" path="res://assets/barry.png" id="18_avnil"]
[ext_resource type="Texture2D" uid="uid://dw1d8wr02vgtu" path="res://assets/eanasir.png" id="18_kc5sq"]
[ext_resource type="Texture2D" uid="uid://cst4uwjd6eidm" path="res://assets/blademaster.png" id="18_ncfkl"]
[ext_resource type="Texture2D" uid="uid://c38v07grxnygg" path="res://assets/jimothy1.png" id="19_4no4h"]
[ext_resource type="Texture2D" uid="uid://dpj5ea3buu7gu" path="res://assets/jimothy.png" id="20_1is56"]
[ext_resource type="Texture2D" uid="uid://bmttjx0ushle0" path="res://assets/infernus-pull-1.png" id="21_i2ho7"]
[ext_resource type="Texture2D" uid="uid://d3waf50o1yp4o" path="res://assets/infernus-pull.png" id="22_2fls7"]
[ext_resource type="Texture2D" uid="uid://ebau4ag28wvt" path="res://assets/piano-1.png" id="23_kfplf"]
[ext_resource type="Texture2D" uid="uid://bbfoyln2f8hk" path="res://assets/piano.png" id="24_lxj0v"]
[ext_resource type="AudioStream" uid="uid://dog5er1o18ved" path="res://assets/whoosh.wav" id="25_tpx70"]
[ext_resource type="Texture2D" uid="uid://cu3bexq5gr1vm" path="res://assets/kevin0.png" id="27_7wego"]
[ext_resource type="Texture2D" uid="uid://d11ibmw5l7od1" path="res://assets/orpheus0.png" id="27_xrngb"]
[ext_resource type="Texture2D" uid="uid://cc0h4u1d82sbq" path="res://assets/kevin.png" id="28_bbh3d"]
[ext_resource type="Texture2D" uid="uid://c0qbfjgj8327w" path="res://assets/orpheus.png" id="28_rdhwl"]
[ext_resource type="Texture2D" uid="uid://bfxhihlsdrq6e" path="res://assets/ruth0.png" id="31_bnoqc"]
[ext_resource type="Texture2D" uid="uid://d3bhkki143jdy" path="res://assets/ruth.png" id="32_wauu6"]
[ext_resource type="Texture2D" uid="uid://baeb2ktf61ppo" path="res://assets/larry0.png" id="35_d4q5m"]
[ext_resource type="Texture2D" uid="uid://bum10el60d6vt" path="res://assets/manbat0.png" id="35_mecgd"]
[ext_resource type="Texture2D" uid="uid://cqpxognb383ke" path="res://assets/manbat.png" id="36_ummjb"]
[ext_resource type="Texture2D" uid="uid://cia8fxu5p07t0" path="res://assets/larry.png" id="36_wg10a"]
[ext_resource type="Texture2D" uid="uid://d1rmhvnp12bg5" path="res://assets/maya0.png" id="39_f171d"]
[ext_resource type="Texture2D" uid="uid://pxqmq77kcias" path="res://assets/maya.png" id="40_dj0bm"]

[sub_resource type="SpriteFrames" id="SpriteFrames_akn02"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bvvmn")
}],
"loop": false,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_1olt3")
}],
"loop": true,
"name": &"empty",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bvvmn")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 1.0,
"texture": ExtResource("2_uhwfe")
}, {
"duration": 1.0,
"texture": ExtResource("3_1uoe5")
}, {
"duration": 6.0,
"texture": ExtResource("5_r74sv")
}, {
"duration": 6.0,
"texture": ExtResource("6_f0lmr")
}, {
"duration": 12.0,
"texture": ExtResource("7_ytjpa")
}, {
"duration": 1.0,
"texture": ExtResource("8_fullp")
}, {
"duration": 1.0,
"texture": ExtResource("9_3gacd")
}, {
"duration": 1.0,
"texture": ExtResource("10_0pmh1")
}, {
"duration": 1.0,
"texture": ExtResource("11_lspsq")
}, {
"duration": 1.0,
"texture": ExtResource("10_0pmh1")
}, {
"duration": 1.0,
"texture": ExtResource("9_3gacd")
}, {
"duration": 1.0,
"texture": ExtResource("8_fullp")
}, {
"duration": 1.0,
"texture": ExtResource("9_3gacd")
}, {
"duration": 1.0,
"texture": ExtResource("10_0pmh1")
}, {
"duration": 1.0,
"texture": ExtResource("11_lspsq")
}, {
"duration": 10.0,
"texture": ExtResource("7_ytjpa")
}, {
"duration": 12.0,
"texture": ExtResource("12_13ox5")
}, {
"duration": 12.0,
"texture": ExtResource("3_bvvmn")
}],
"loop": false,
"name": &"summoning",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_yot1y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_vablc")
}, {
"duration": 1.0,
"texture": ExtResource("16_a2dnf")
}],
"loop": false,
"name": &"alice",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_1u0c3")
}, {
"duration": 1.0,
"texture": ExtResource("18_avnil")
}],
"loop": false,
"name": &"barry",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_2y7oj")
}, {
"duration": 1.0,
"texture": ExtResource("18_ncfkl")
}],
"loop": false,
"name": &"blademaster",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_pyvnm")
}, {
"duration": 1.0,
"texture": ExtResource("16_ikxmv")
}],
"loop": false,
"name": &"charlotte",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_0oa7i")
}, {
"duration": 1.0,
"texture": ExtResource("4_2dpmh")
}],
"loop": false,
"name": &"dave",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_ncays")
}, {
"duration": 1.0,
"texture": ExtResource("18_kc5sq")
}],
"loop": false,
"name": &"eanasir",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("21_i2ho7")
}, {
"duration": 1.0,
"texture": ExtResource("22_2fls7")
}],
"loop": false,
"name": &"infernus",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_4no4h")
}, {
"duration": 1.0,
"texture": ExtResource("20_1is56")
}],
"loop": false,
"name": &"jimothy",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_7wego")
}, {
"duration": 1.0,
"texture": ExtResource("28_bbh3d")
}],
"loop": false,
"name": &"kevin",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wwwmp")
}, {
"duration": 1.0,
"texture": ExtResource("7_jirfx")
}],
"loop": false,
"name": &"lab8researcher",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_d4q5m")
}, {
"duration": 1.0,
"texture": ExtResource("36_wg10a")
}],
"loop": false,
"name": &"larry",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("35_mecgd")
}, {
"duration": 1.0,
"texture": ExtResource("36_ummjb")
}],
"loop": false,
"name": &"manbat",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_f171d")
}, {
"duration": 1.0,
"texture": ExtResource("40_dj0bm")
}],
"loop": false,
"name": &"maya",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_xrngb")
}, {
"duration": 1.0,
"texture": ExtResource("28_rdhwl")
}],
"loop": false,
"name": &"orpheus",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("23_kfplf")
}, {
"duration": 1.0,
"texture": ExtResource("24_lxj0v")
}],
"loop": false,
"name": &"piano",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("31_bnoqc")
}, {
"duration": 1.0,
"texture": ExtResource("32_wauu6")
}],
"loop": false,
"name": &"ruth",
"speed": 0.5
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_aygcv")
}, {
"duration": 1.0,
"texture": ExtResource("9_8kctf")
}],
"loop": false,
"name": &"trudy",
"speed": 0.5
}]

[node name="RoomScene" type="Node2D"]
script = ExtResource("1_5a0lj")

[node name="Room" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 300)
scale = Vector2(0.501109, 0.5)
sprite_frames = SubResource("SpriteFrames_akn02")
animation = &"empty"

[node name="Button" type="Button" parent="."]
offset_left = 21.0
offset_top = 91.0
offset_right = 152.0
offset_bottom = 124.0
focus_mode = 0
theme = ExtResource("14_afhcp")
text = "Summon a Soul"

[node name="ShowCompendium" type="Button" parent="."]
offset_left = 21.0
offset_top = 128.0
offset_right = 222.0
offset_bottom = 161.0
focus_mode = 0
theme = ExtResource("14_afhcp")
text = "View Spirit Compendium"

[node name="NextDayButton" type="Button" parent="."]
offset_left = 21.0
offset_top = 166.0
offset_right = 170.0
offset_bottom = 199.0
focus_mode = 0
theme = ExtResource("14_afhcp")
text = "Start the next day"

[node name="Day" type="Label" parent="."]
offset_left = 24.0
offset_top = 8.0
offset_right = 155.0
offset_bottom = 31.0
theme = ExtResource("14_afhcp")
text = "<PLACEHOLDER>"

[node name="Money" type="Label" parent="."]
offset_left = 24.0
offset_top = 32.0
offset_right = 155.0
offset_bottom = 55.0
theme = ExtResource("14_afhcp")
text = "<PLACEHOLDER>"

[node name="Candles" type="Label" parent="."]
offset_left = 24.0
offset_top = 56.0
offset_right = 155.0
offset_bottom = 79.0
theme = ExtResource("14_afhcp")
text = "<PLACEHOLDER>"

[node name="Fade" type="ColorRect" parent="."]
visible = false
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 0.588235)

[node name="SummonResult" type="AnimatedSprite2D" parent="."]
position = Vector2(400, 300)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_yot1y")

[node name="TransitionBox" parent="." instance=ExtResource("5_p8ga4")]
visible = false

[node name="StateContainer" parent="." instance=ExtResource("11_vl6ey")]

[node name="DialogueBox" parent="." instance=ExtResource("12_40mwk")]
visible = false

[node name="Skip" type="Button" parent="."]
visible = false
offset_left = 626.0
offset_top = 20.0
offset_right = 774.0
offset_bottom = 51.0
focus_mode = 0
theme = ExtResource("14_afhcp")
text = "Skip Animation >>"

[node name="Compendium" parent="." instance=ExtResource("13_tygmm")]
visible = false
position = Vector2(195, 153)

[node name="Whoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_tpx70")
volume_db = -10.0
mix_target = 1

[connection signal="animation_finished" from="Room" to="." method="_on_room_animation_finished"]
[connection signal="frame_changed" from="Room" to="." method="_on_room_frame_changed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ShowCompendium" to="." method="_on_show_compendium_pressed"]
[connection signal="pressed" from="NextDayButton" to="." method="_on_next_day_button_pressed"]
[connection signal="frame_changed" from="SummonResult" to="." method="_on_summon_result_frame_changed"]
[connection signal="dismissed" from="TransitionBox" to="." method="_on_transition_box_dismissed"]
[connection signal="finished" from="DialogueBox" to="." method="_on_dialogue_box_finished"]
[connection signal="pressed" from="Skip" to="." method="_on_skip_pressed"]
[connection signal="finished" from="Compendium" to="." method="_on_compendium_finished"]
